# cognite-async

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
cognite/async_client/: __init__.py  _api_client.py  _cognite_client.py  concurrency.py  exceptions.py  utils.py
cognite/async_client/_api/: __init__.py  assets.py  datapoints.py
cognite/async_client/data_classes/: __init__.py  _base.py
cognite/async_client/jobs/: __init__.py  base.py  create.py  datapoints.py
docs/: Makefile
docs/source/: cogniteasync.rst  conf.py  index.rst
tests/: test_create.py  test_datapoints.py  test_job_queue.py  test_upsert.py
