[tool.poetry]
name = "cognite-async"
version = "0.3.0"
description = "Extensions for asynchronous calls for the Cognite Data Fusion (CDF) Python SDK"
authors = ["Sander Land <sander.land@cognite.com>"]

packages = [
    { include="cognite", from="." },
]

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
known_third_party = ["numpy", "pandas", "pytest"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py36,py37,py38

[testenv]
setenv =
    COGNITE_API_KEY={env:COGNITE_API_KEY}
    COGNITE_BASE_URL={env:COGNITE_BASE_URL}
    COGNITE_CLIENT_NAME={env:COGNITE_CLIENT_NAME}
    COGNITE_PROJECT={env:COGNITE_PROJECT}

deps =
    pytest
    pytest-cov

commands =
    pytest tests --cov-report xml:coverage.xml --cov=cognite
"""

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.25.2"
numpy = "^1.17"
cognite-sdk = "^1.3"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
isort = "^4.3"
pre-commit = "^1.19"
pytest = "^5.2"
pytest-cov = "^2.8"
tox = "^3.14"
tox-pyenv = "^1.1"


[[tool.poetry.source]]
name = "snakepit"
url = "https://cognite.jfrog.io/cognite/api/pypi/snakepit/simple"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
